# AndroidTrainingDemo

./: README.md
AndroidHeroes/app/: build.gradle
AndroidHeroes/app/src/main/: AndroidManifest.xml
AndroidHeroes/app/src/main/res/layout/: activity_main.xml
AndroidHeroes/app/src/main/res/values/: strings.xml
ComplexListViewDemo/: README.md
ComplexListViewDemo/app/: build.gradle  proguard-rules.pro
ComplexListViewDemo/app/src/main/: AndroidManifest.xml
ComplexListViewDemo/app/src/main/res/drawable/: dot_bg_selector.xml  point_bg_enable.xml  point_bg_normal.xml
ComplexListViewDemo/app/src/main/res/layout/: activity_home.xml  divider_line.xml  view_home_ad.xml  view_home_ad_banner.xml  view_home_meal_show.xml  view_home_menu.xml  view_home_menu_item.xml  view_home_search.xml  view_home_sign_mall.xml  view_home_special.xml  view_home_tag.xml  view_home_talent.xml  view_home_talent_item.xml
ComplexListViewDemo/demo/: app-debug.apk
CoordinatorLayoutDemo/app/: build.gradle
CoordinatorLayoutDemo/app/src/main/: AndroidManifest.xml
DesignPattern/: README.md
DesignPattern/src/: 模板方法模式.txt  策略模式.txt  适配器模式.txt
GuidePageManage/: README.md
GuidePageManage/app/: build.gradle  proguard-rules.pro
GuidePageManage/app/src/main/: AndroidManifest.xml
JNISample/: README.md
JNISample/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
JNISample/app/src/androidTest/java/cn/cfanr/jnisample/: ExampleInstrumentedTest.java
JNISample/app/src/main/: AndroidManifest.xml
JNISample/app/src/main/cpp/: dynamic-register-jni.cpp  native-field.cpp  native-lib.cpp  native-method.cpp  native-params.cpp  native-string.cpp
JNISample/app/src/main/java/cn/cfanr/jnisample/: DynamicRegisterJni.java  FieldJni.java  MainActivity.java  MethodJni.java  ParamsJni.java  StringJni.java  SuperJni.java
JNISample/app/src/main/java/cn/cfanr/jnisample/model/: Person.java
JNISample/app/src/main/res/layout/: activity_main.xml
JNISample/app/src/main/res/values/: strings.xml
JNISample/app/src/test/java/cn/cfanr/jnisample/: ExampleUnitTest.java
JNISample/gradle/wrapper/: gradle-wrapper.properties
UltraPTRDemo/: README.md
UltraPTRDemo/app/: build.gradle
UltraPTRDemo/app/src/main/: AndroidManifest.xml
(+242 files in other folders)
